pkgs: fix misaligned buttons in confirm popup

--- a/web/modules/pkgs/graph/pkgs/index.css
+++ b/web/modules/pkgs/graph/pkgs/index.css
@@ -63,7 +63,3 @@ textarea {
   width: 560px;
   height: 220px;
 }
-
-.btnPrimary {
-    margin: 10px 0 0 40%;
-}
